# projetDevMLOps

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  implicit_model.pkl  index.html  mlflow.db  prometheus.yaml  tfidf.pkl  tfidf_matrix.pkl
.github/workflows/: deploy.yml  python-app.yml
api/: .env  Dockerfile  main.py  mlflow.db  pyproject.toml  requirement.txt  requirements.txt  test.py  test_recipe.py
api/bdd/: init.sql
api/logisticregression/: logisticregression.py
api/model/: model.py
api/model/tests/: model.py  requirements.txt
api/src/: auth.py  config.py  database.py  dependencies.py  pyproject.toml
api/src/models/: recette.py  recipe.py  user.py
api/src/router/: auth_router.py  food_router.py  user_router.py
api/src/services/: food_service.py  food_service_spoonacular.py  mlflow_service.py
assets/: index-DJbplTTF.css  index-kOMiEUKL.css
mlruns/2/3ee9626931ac4d61a05eb047c786cdc1/artifacts/: tfidf.pkl  tfidf_matrix.pkl
model/: docker-compose.yml
model/tests/: data.csv  model.py  requirements.txt
web/: .dockerignore  package-lock.json  package.json  vite.config.js
web/templates/: index.html  recipe.html
