[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "httpx>=0.27.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "prometheus-client==0.18.0",
    "psycopg2-binary",
    "typing-extensions>=4.10.0",
    "uvicorn[standard]==0.29.0",
    "python-jose[cryptography]==3.3.0",
    "prometheus-fastapi-instrumentator==7.1.0",
    "python-dotenv"
]